# d_pygen

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
d_pygen/: __init__.py  ai_engine.py  cache.py  cli.py  config.py  doctor.py  file_creator.py  logger.py  provider_selector.py  ui.py  validator.py
d_pygen/commands/: config.py  init.py
d_pygen/core/: command_runner.py  dependency_manager.py  dependency_scanner.py  interactive.py  plugin_manager.py  plugin_publisher.py  plugin_validator.py  project_detector.py  telemetry.py  template_engine.py  template_manager.py  toolchain.py  updater.py
d_pygen/providers/: ollama_provider.py  openai_compatible_provider.py  openrouter_provider.py
tests/: test.py
